# mssqlAdapters

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci-release.yml
dotnet/: MssqlAdapter.cs  an5Adapter.cs
python/: an5_adapter.py  mssql_adapter.py
test/: smoke.py  unit.test.js
typescript/: an5Adapter.ts  index.ts  mssqlAdapter.ts
